--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <sp-action-group style="display: flex; justify-content: space-between;">
         <sp-action-button label="Edit" id="FindCenter"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><polygon points="1003 1002 868 1002 868 932 933 932 933 867 1003 867 1003 1002"  /><path d="M750.9,1002h-187.35v-70h187.35v70ZM446.45,1002h-187.36v-70h187.36v70Z"  /><polygon points="142 1002 7 1002 7 867 77 867 77 932 142 932 142 1002"  /><path d="M77,749.9H7v-187.35h70v187.35ZM77,445.45H7v-187.36h70v187.36Z"  /><polygon points="77 141 7 141 7 6 142 6 142 76 77 76 77 141"  /><path d="M750.9,76h-187.36V6h187.36v70ZM446.45,76h-187.35V6h187.35v70Z"  /><polygon points="1003 141 933 141 933 76 868 76 868 6 1003 6 1003 141"  /><path d="M1003,749.9h-70v-187.36h70v187.36ZM1003,445.45h-70v-187.35h70v187.35Z"  /><rect x="470" y="650.38" width="60" height="129.62"  /><rect x="470" y="228" width="60" height="134.21"  /><rect x="224" y="470" width="133" height="60"  /><rect x="645.03" y="470" width="130.97" height="60"  /><path d="M500.5,678c-95.67,0-173.5-77.83-173.5-173.5s77.83-173.5,173.5-173.5,173.5,77.83,173.5,173.5-77.83,173.5-173.5,173.5ZM500.5,391c-62.58,0-113.5,50.92-113.5,113.5s50.92,113.5,113.5,113.5,113.5-50.92,113.5-113.5-50.92-113.5-113.5-113.5Z"  /></svg></div></sp-action-button>
 
-        <span style="margin-left: 55px;"><sp-action-button label="Edit" id="o_SelectLayerBounds"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div></sp-action-button></span>
+        
+        <sp-action-button label="Edit" id="o_FindCenterButton"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div>
+        </sp-action-button>
       </sp-action-group>
 
       <!--Expand / shrink selection-->
@@ -81,20 +83,59 @@
           <sp-action-button label="Edit"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M763.45,998h-207.26v-70h207.26v70ZM426.93,998h-189.93c-6.58,0-13.23-.28-19.76-.82l5.81-69.76c4.61.38,9.3.58,13.95.58h189.93v70ZM904.92,950.32l-42.31-55.77c41.56-31.53,65.39-79.48,65.39-131.55v-22.23h70v22.23c0,37.39-8.53,73.14-25.36,106.28-16.03,31.57-39.45,59.59-67.72,81.04ZM80.21,938.05C30.51,893.5,2,829.7,2,763v-38.67h70v38.67c0,46.83,20.02,91.64,54.93,122.92l-46.72,52.13ZM998,611.51h-70v-206.81h70v206.81ZM72,595.07H2v-206.81h70v206.81ZM998,275.45h-70v-38.45c0-46.9-20.07-91.75-55.06-123.04l46.66-52.18c49.83,44.56,78.4,108.42,78.4,175.22v38.45ZM72,259H2v-22c0-36.91,8.79-73.7,25.42-106.4,16.07-31.6,39.54-59.64,67.87-81.08l42.24,55.82c-41.65,31.52-65.54,79.51-65.54,131.67v22ZM776.76,72.56c-4.55-.37-9.18-.56-13.76-.56h-190.16V2h190.16c6.49,0,13.05.27,19.5.8l-5.74,69.76ZM443.59,72h-206.81V2h206.81v70Z"  /></svg></div>
           </sp-action-button>
 
-          <sp-action-button label="Edit"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div>
-          </sp-action-button>
-          <sp-footer class="row" style="margin: 20px; justify-content: space-around;">
-            <sp-button id="dialogButton">dialog</sp-button>
-          </sp-footer>
-          <dialog id="dialog">
-            <sp-body>
-            <span>this is some text</span>
-          </sp-body>
-          </dialog>
+          <sp-action-button label="Edit"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div>       
+
         </sp-action-group>
       </div>
   </sp-body>
 
+
+<!---------------------- Option Dialogs ---------------------->
+
+
+<!------- Find Center ------->
+<dialog id="o_FindCenter" style="min-height: 300px;">
+  <sp-body>
+    <div class="wrapper" id="optionDialogs">
+      <sp-action-group>
+
+        <sp-label size="l">Crosshair type:</sp-label>
+        <sp-field-group style="display: flex; flex-direction: column; margin-left: 10px;">
+          <sp-checkbox size="s">Guides</sp-checkbox>
+          <sp-checkbox size="s">Crosshair layer</sp-checkbox>
+          <sp-checkbox size="s">Colour sampler</sp-checkbox>
+        </sp-field-group>
+<hr>
+        <sp-label size="l">Look for center of:</sp-label>
+        <sp-field-group style="display: flex; flex-direction: column; margin-left: 10px;">
+          <sp-checkbox size="s" checked>Active layer bounds</sp-checkbox>
+          <sp-checkbox size="s">Entire canvas</sp-checkbox>
+          <sp-checkbox size="s">Selection</sp-checkbox>
+        </sp-field-group>
+<hr>
+        <sp-field-group style="display: flex; flex-direction: column; margin-left: 10px; padding-top: 5px;">
+          <sp-checkbox size="s">Display coordinates?</sp-checkbox>
+        </sp-field-group>
+
+      </sp-action-group>
+
+      <footer>
+        <sp-action-group style="display: flex; justify-content: flex-start; margin-top: 20px;">
+          <div style="padding: 10px;">
+          <sp-action-button>
+            Ok
+          </sp-action-button>
+          </div>
+          <div style="padding: 10px;">
+          <sp-action-button>
+            Cancel
+          </sp-action-button>
+          </div>
+        </sp-action-group>
+      </footer>
+    </div>
+  </sp-body>
+</dialog>
  
 </body>
 </html>
