commit 8 selection bounds works!

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <!--Feather selection-->
         <sp-label>Feather selection</sp-label>
         <sp-action-group style="display: flex; justify-content: space-between;">
-          <sp-action-button label="Edit"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M763.45,1002h-207.26v-70h207.26v70ZM426.93,1002h-189.93c-6.58,0-13.23-.28-19.76-.82l5.81-69.76c4.61.38,9.3.58,13.95.58h189.93v70ZM904.92,954.32l-42.31-55.77c41.56-31.53,65.39-79.48,65.39-131.55v-22.23h70v22.23c0,37.39-8.53,73.14-25.36,106.28-16.03,31.57-39.45,59.59-67.72,81.04ZM80.21,942.05C30.51,897.5,2,833.7,2,767v-38.67h70v38.67c0,46.83,20.02,91.64,54.93,122.92l-46.72,52.13ZM998,615.51h-70v-206.81h70v206.81ZM72,599.07H2v-206.81h70v206.81ZM998,279.45h-70v-38.45c0-46.9-20.07-91.75-55.06-123.04l46.66-52.18c49.83,44.56,78.4,108.42,78.4,175.22v38.45ZM72,263H2v-22c0-36.91,8.79-73.7,25.42-106.4,16.07-31.6,39.54-59.64,67.87-81.08l42.25,55.82c-41.65,31.52-65.54,79.51-65.54,131.67v22ZM776.76,76.56c-4.55-.37-9.18-.56-13.76-.56h-190.16V6h190.16c6.49,0,13.05.27,19.5.8l-5.74,69.76ZM443.59,76h-206.81V6h206.81v70Z"  /><path d="M641,780c0-19.33,15.67-35,35-35h.15c19.33-.05,35.03,15.59,35.08,34.92h0c.04,19.23-15.43,34.87-34.62,35.08h-.61c-19.33,0-35-15.67-35-35ZM513.73,780c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM386.46,780c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM284.37,809.08c-18.48-5.67-28.87-25.25-23.2-43.73h0c5.67-18.48,25.25-28.86,43.73-23.19h0c18.47,5.66,28.86,25.24,23.19,43.72h0c-4.62,15.06-18.47,24.75-33.44,24.74h0c-3.4,0-6.86-.49-10.28-1.54ZM761.46,742.68c-18.49-5.63-28.91-25.19-23.27-43.68h0c5.64-18.49,25.19-28.91,43.68-23.27h0c18.49,5.63,28.91,25.19,23.28,43.68h0c-4.6,15.09-18.47,24.8-33.47,24.8h0c-3.38,0-6.82-.49-10.22-1.53ZM189,680.07c-.01-19.33,15.65-35,34.98-35.01h0c19.33,0,35.01,15.65,35.02,34.98h0c0,19.33-15.65,35.01-34.98,35.02h0c-19.33,0-35.01-15.66-35.02-34.99ZM741,582.37c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM189,552.79c0-19.34,15.67-35,35-35h0c19.33,0,35,15.66,35,35h0c0,19.32-15.67,34.99-35,34.99h0c-19.33,0-35-15.67-35-34.99ZM741,455.1c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM189,425.51c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM741,327.89c-.03-19.33,15.61-35.03,34.94-35.06h0c19.33-.04,35.03,15.61,35.06,34.94h0c.03,19.33-15.61,35.02-34.94,35.06h-.06c-19.31,0-34.97-15.63-35-34.94ZM218.12,332.15c-18.48-5.66-28.88-25.23-23.22-43.71h0c5.66-18.49,25.23-28.88,43.71-23.22h0c18.48,5.66,28.88,25.23,23.22,43.71h0c-4.61,15.07-18.47,24.76-33.45,24.76h0c-3.4,0-6.85-.49-10.26-1.54ZM695.03,265.82c-18.48-5.65-28.89-25.21-23.24-43.7h0c5.64-18.49,25.21-28.89,43.7-23.24h0c18.48,5.64,28.89,25.21,23.24,43.69h0c-4.61,15.08-18.47,24.79-33.46,24.79h0c-3.38,0-6.83-.5-10.24-1.54ZM288.88,228.04c-.01-19.33,15.64-35.02,34.97-35.04h0c19.33-.02,35.01,15.63,35.04,34.96h0c.02,19.33-15.64,35.02-34.97,35.04h-.03c-19.31,0-34.98-15.65-35.01-34.96ZM543.43,228c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM416.16,228c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35Z"  /></svg></div>
+          <sp-action-button label="Edit" id="featherSelection"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M763.45,1002h-207.26v-70h207.26v70ZM426.93,1002h-189.93c-6.58,0-13.23-.28-19.76-.82l5.81-69.76c4.61.38,9.3.58,13.95.58h189.93v70ZM904.92,954.32l-42.31-55.77c41.56-31.53,65.39-79.48,65.39-131.55v-22.23h70v22.23c0,37.39-8.53,73.14-25.36,106.28-16.03,31.57-39.45,59.59-67.72,81.04ZM80.21,942.05C30.51,897.5,2,833.7,2,767v-38.67h70v38.67c0,46.83,20.02,91.64,54.93,122.92l-46.72,52.13ZM998,615.51h-70v-206.81h70v206.81ZM72,599.07H2v-206.81h70v206.81ZM998,279.45h-70v-38.45c0-46.9-20.07-91.75-55.06-123.04l46.66-52.18c49.83,44.56,78.4,108.42,78.4,175.22v38.45ZM72,263H2v-22c0-36.91,8.79-73.7,25.42-106.4,16.07-31.6,39.54-59.64,67.87-81.08l42.25,55.82c-41.65,31.52-65.54,79.51-65.54,131.67v22ZM776.76,76.56c-4.55-.37-9.18-.56-13.76-.56h-190.16V6h190.16c6.49,0,13.05.27,19.5.8l-5.74,69.76ZM443.59,76h-206.81V6h206.81v70Z"  /><path d="M641,780c0-19.33,15.67-35,35-35h.15c19.33-.05,35.03,15.59,35.08,34.92h0c.04,19.23-15.43,34.87-34.62,35.08h-.61c-19.33,0-35-15.67-35-35ZM513.73,780c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM386.46,780c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM284.37,809.08c-18.48-5.67-28.87-25.25-23.2-43.73h0c5.67-18.48,25.25-28.86,43.73-23.19h0c18.47,5.66,28.86,25.24,23.19,43.72h0c-4.62,15.06-18.47,24.75-33.44,24.74h0c-3.4,0-6.86-.49-10.28-1.54ZM761.46,742.68c-18.49-5.63-28.91-25.19-23.27-43.68h0c5.64-18.49,25.19-28.91,43.68-23.27h0c18.49,5.63,28.91,25.19,23.28,43.68h0c-4.6,15.09-18.47,24.8-33.47,24.8h0c-3.38,0-6.82-.49-10.22-1.53ZM189,680.07c-.01-19.33,15.65-35,34.98-35.01h0c19.33,0,35.01,15.65,35.02,34.98h0c0,19.33-15.65,35.01-34.98,35.02h0c-19.33,0-35.01-15.66-35.02-34.99ZM741,582.37c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM189,552.79c0-19.34,15.67-35,35-35h0c19.33,0,35,15.66,35,35h0c0,19.32-15.67,34.99-35,34.99h0c-19.33,0-35-15.67-35-34.99ZM741,455.1c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM189,425.51c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM741,327.89c-.03-19.33,15.61-35.03,34.94-35.06h0c19.33-.04,35.03,15.61,35.06,34.94h0c.03,19.33-15.61,35.02-34.94,35.06h-.06c-19.31,0-34.97-15.63-35-34.94ZM218.12,332.15c-18.48-5.66-28.88-25.23-23.22-43.71h0c5.66-18.49,25.23-28.88,43.71-23.22h0c18.48,5.66,28.88,25.23,23.22,43.71h0c-4.61,15.07-18.47,24.76-33.45,24.76h0c-3.4,0-6.85-.49-10.26-1.54ZM695.03,265.82c-18.48-5.65-28.89-25.21-23.24-43.7h0c5.64-18.49,25.21-28.89,43.7-23.24h0c18.48,5.64,28.89,25.21,23.24,43.69h0c-4.61,15.08-18.47,24.79-33.46,24.79h0c-3.38,0-6.83-.5-10.24-1.54ZM288.88,228.04c-.01-19.33,15.64-35.02,34.97-35.04h0c19.33-.02,35.01,15.63,35.04,34.96h0c.02,19.33-15.64,35.02-34.97,35.04h-.03c-19.31,0-34.98-15.65-35.01-34.96ZM543.43,228c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35ZM416.16,228c0-19.33,15.67-35,35-35h0c19.33,0,35,15.67,35,35h0c0,19.33-15.67,35-35,35h0c-19.33,0-35-15.67-35-35Z"  /></svg></div>
           </sp-action-button>
 
-          <sp-action-button label="Edit"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div>
+          <sp-action-button label="Edit" id="o_featherButton"><div slot="icon" class="icon"><svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><path d="M439,785c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,485c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75ZM439,185c0-41.42,33.58-75,75-75h0c41.42,0,75,33.58,75,75h0c0,41.42-33.58,75-75,75h0c-41.42,0-75-33.58-75-75Z"  /></svg></div>
           </sp-action-button>
         </sp-action-group>
 
@@ -153,30 +153,68 @@
     <div class="wrapper" id="optionDialogs">
       <sp-action-group>
 
-        <sp-label size="L">Expand selection</sp-label>
+        <sp-label size="L">Expand selection amount</sp-label>
 
         <sp-field-group>
           <sp-label size="s" style="margin-bottom: 5px;">Click value in pixels</sp-label>
-          <sp-textfield type="text" id="o_click_expandAmount" width="50px" style="margin-bottom: 10px;" placeholder="1"></sp-textfield>
+          <sp-textfield type="number" id="o_click_expandAmount" width="50px" style="margin-bottom: 10px;" placeholder="1"></sp-textfield>
         </sp-field-group>
 
         <sp-field-group>
           <sp-label size="s" style="margin-bottom: 5px;">Alt+Click value in pixels</sp-label>
-          <sp-textfield id="o_altClick_expandAmount" width="50px" style="margin-bottom: 10px;" placeholder="5"></sp-textfield>
+          <sp-textfield type="number" id="o_altClick_expandAmount" width="50px" style="margin-bottom: 10px;" placeholder="5"></sp-textfield>
         </sp-field-group>
 
         <hr>
 
-        <sp-label size="L">Shrink selection</sp-label>
+        <sp-label size="L">Shrink selection amount</sp-label>
 
         <sp-field-group>
           <sp-label size="s" style="margin-bottom: 5px;">Click value in pixels</sp-label>
-          <sp-textfield id="o_click_contractAmount" width="50px" style="margin-bottom: 10px;" placeholder="1"></sp-textfield>
+          <sp-textfield type="number" id="o_click_contractAmount" width="50px" style="margin-bottom: 10px;" placeholder="1"></sp-textfield>
         </sp-field-group>
 
         <sp-field-group>
           <sp-label size="s" style="margin-bottom: 5px;">Alt+Click value in pixels</sp-label>
-          <sp-textfield id="o_altClick_contractAmount" width="50px" placeholder="5"></sp-textfield>
+          <sp-textfield type="number" id="o_altClick_contractAmount" width="50px" placeholder="5"></sp-textfield>
+        </sp-field-group>
+
+        <footer class="optionsFooter">
+          <sp-action-group style="display: flex; justify-content: flex-start; margin-top: 10px;">
+            <div style="padding: 10px;">
+            <sp-action-button id="okButton">
+              Ok
+            </sp-action-button>
+            </div>
+            <div style="padding: 10px;">
+            <sp-action-button id="cancelButton">
+              Cancel
+            </sp-action-button>
+            </div>
+          </sp-action-group>
+        </footer>
+
+      </sp-action-group>
+    </div>
+  </sp-body>
+</dialog>
+
+<!------- Feather ------->
+<dialog id="o_feather">
+  <sp-body>
+    <div class="wrapper" id="optionDialogs">
+      <sp-action-group>
+
+        <sp-label size="L">Feather amount</sp-label>
+
+        <sp-field-group>
+          <sp-label size="s" style="margin-bottom: 5px;">Click value in pixels</sp-label>
+          <sp-textfield type="number" id="o_click_featherAmount" width="50px" style="margin-bottom: 10px;" placeholder="5"></sp-textfield>
+        </sp-field-group>
+
+        <sp-field-group>
+          <sp-label size="s" style="margin-bottom: 5px;">Alt+Click value in pixels</sp-label>
+          <sp-textfield type="number" id="o_altClick_featherAmount" width="50px" style="margin-bottom: 10px;" placeholder="15"></sp-textfield>
         </sp-field-group>
 
         <footer class="optionsFooter">
