--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
       <footer class="optionsFooter">
         <sp-action-group style="display: flex; justify-content: flex-start;">
           <div style="padding: 10px;">
-          <sp-button id="cancelButton" variant="secondary">
+          <sp-button class="cancelButton" variant="secondary" type="reset">
             Cancel
           </sp-button>
           </div>
           <div style="padding: 10px;">
-          <sp-button id="okButton" variant="">
+          <sp-button class="okButton" variant="" type="submit">
             Ok
           </sp-button>
           </div>
@@ -232,12 +232,12 @@
         <footer class="optionsFooter">
           <sp-action-group style="display: flex; justify-content: flex-start;">
             <div style="padding: 10px;">
-            <sp-button id="cancelButton" variant="secondary">
+            <sp-button class="cancelButton" variant="secondary">
               Cancel
             </sp-button>
             </div>
             <div style="padding: 10px;">
-            <sp-button id="okButton" variant="">
+            <sp-button class="okButton" variant="">
               Ok
             </sp-button>
             </div>
@@ -268,12 +268,12 @@
       <footer class="optionsFooter" style="margin-top: 55px;">
         <sp-action-group style="display: flex; justify-content: flex-start;">
           <div style="padding: 10px;">
-          <sp-button id="cancelButton" variant="secondary">
+          <sp-button class="cancelButton" variant="secondary">
             Cancel
           </sp-button>
           </div>
           <div style="padding: 10px;">
-          <sp-button id="okButton" variant="">
+          <sp-button class="okButton" variant="">
             Ok
           </sp-button>
           </div>
@@ -309,12 +309,12 @@
         <footer class="optionsFooter">
           <sp-action-group style="display: flex; justify-content: flex-start;">
             <div style="padding: 10px;">
-            <sp-button id="cancelButton" variant="secondary">
+            <sp-button class="cancelButton" variant="secondary">
               Cancel
             </sp-button>
             </div>
             <div style="padding: 10px;">
-            <sp-button id="okButton" variant="">
+            <sp-button class="okButton" variant="">
               Ok
             </sp-button>
             </div>
@@ -351,12 +351,12 @@
         <footer class="optionsFooter">
           <sp-action-group style="display: flex; justify-content: flex-start;">
             <div style="padding: 10px;">
-            <sp-button id="cancelButton" variant="secondary">
+            <sp-button class="cancelButton" variant="secondary">
               Cancel
             </sp-button>
             </div>
             <div style="padding: 10px;">
-            <sp-button id="okButton" variant="">
+            <sp-button class="okButton" variant="">
               Ok
             </sp-button>
             </div>
