--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <sp-label size="L">Crosshair type:</sp-label>
         <sp-field-group>
           <sp-checkbox size="s" id="useGuidesCheckbox" checked>Guides</sp-checkbox>
-          <sp-checkbox size="s">Crosshair layer</sp-checkbox>
+          <sp-checkbox size="s" id="usePixelCheckbox">Crosshair layer</sp-checkbox>
           <sp-checkbox size="s" id="useColorSamplerCheckbox">Colour sampler</sp-checkbox>
         </sp-field-group>
 
