Everything works other than local storage!

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 <hr style="margin-top: 15px;">
         <sp-field-group style="padding-top: 5px;">
-          <sp-checkbox size="s">Display coordinates?</sp-checkbox>
+          <sp-checkbox size="s" id="alertCoordinatesCheckbox">Display coordinates?</sp-checkbox>
         </sp-field-group>
 
       </sp-action-group>
