--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
 
-        <sp-label style="display: flex;" size="L">Find the center of a selection.<br>Alt click to clear guides and color samplers.<br> Alt click twice to remove Centerpoint layers.</sp-label>
+        <sp-label style="display: flex;" size="L">Find the center of a selection.<br>Alt click to clear guides and color samplers.<br> Alt click twice to remove Pixel layers.</sp-label>
 
         <sp-label size="L">Crosshair type:</sp-label>
         <sp-field-group>
           <sp-checkbox size="s" id="useGuidesCheckbox" checked>Guides</sp-checkbox>
-          <sp-checkbox size="s" id="usePixelCheckbox">Centerpoint layer</sp-checkbox>
+          <sp-checkbox size="s" id="usePixelCheckbox">Pixel layer</sp-checkbox>
           <sp-checkbox size="s" id="useColorSamplerCheckbox">Colour sampler</sp-checkbox>
         </sp-field-group>
 
