--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
 
-        <sp-label style="display: flex;" size="L">Find the center of a selection.<br>Alt click to clear guides and color samplers.<br> Alt click twice to remove Pixel layers.</sp-label>
+        <sp-label style="display: flex;" size="L">Find the center of a selection.<br>Alt click to clear guides and color samplers.<br> Alt click three times to remove Pixel layers.</sp-label>
 
         <sp-label size="L">Crosshair type:</sp-label>
         <sp-field-group>
@@ -293,12 +293,12 @@
         <sp-label size="L">Feather amount:</sp-label>
 
         <sp-field-group>
-          <sp-label size="s" style="margin-bottom: 5px;">Value in pixels</sp-label>
+          <sp-label size="s" style="margin-bottom: 5px;">Feather radius in pixels</sp-label>
           <sp-textfield type="number" id="o_click_featherAmount" width="50px" style="margin-bottom: 10px;" placeholder="5"></sp-textfield>
         </sp-field-group>
 
         <sp-field-group>
-          <sp-label size="s" style="margin-bottom: 5px;">Alt+Click value in pixels</sp-label>
+          <sp-label size="s" style="margin-bottom: 5px;">Alt+Click radius in pixels</sp-label>
           <sp-textfield type="number" id="o_altClick_featherAmount" width="50px" style="margin-bottom: 10px;" placeholder="15"></sp-textfield>
         </sp-field-group>
         
@@ -335,12 +335,12 @@
         <sp-label size="L">Smooth amount:</sp-label>
 
         <sp-field-group>
-          <sp-label size="s" style="margin-bottom: 5px;">Value in pixels</sp-label>
+          <sp-label size="s" style="margin-bottom: 5px;">Sample radius in pixels</sp-label>
           <sp-textfield type="number" id="o_click_smoothAmount" width="50px" style="margin-bottom: 10px;" placeholder="5"></sp-textfield>
         </sp-field-group>
 
         <sp-field-group>
-          <sp-label size="s" style="margin-bottom: 5px;">Alt+Click value in pixels</sp-label>
+          <sp-label size="s" style="margin-bottom: 5px;">Alt+Click radius in pixels</sp-label>
           <sp-textfield type="number" id="o_altClick_smoothAmount" width="50px" style="margin-bottom: 10px;" placeholder="15"></sp-textfield>
         </sp-field-group>
         
