--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
 <!------- Find Center Options ------->
-<dialog class="Options" id="o_findCenter">
+<dialog id="o_findCenter">
   <sp-body>
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
@@ -192,7 +192,7 @@
 </dialog>
 
 <!------- Expand / Shrink Options ------->
-<dialog class="Options" id="o_expandShrink">
+<dialog id="o_expandShrink">
   <sp-body>
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
@@ -244,7 +244,7 @@
 </dialog>
 
 <!------- halve selection Options ------->
-<dialog class="Options" id="o_halveSelection">
+<dialog id="o_halveSelection">
   <sp-body>
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
@@ -279,7 +279,7 @@
 </dialog>
 
 <!------- Feather Options ------->
-<dialog class="Options" id="o_feather">
+<dialog id="o_feather">
   <sp-body>
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
@@ -321,7 +321,7 @@
 </dialog>
 
 <!------- Smooth Options ------->
-<dialog class="Options" id="o_smoothSelection">
+<dialog id="o_smoothSelection">
   <sp-body>
     <div class="o_wrapper" id="optionDialogs">
       <sp-action-group>
