--- a/index.html
+++ b/index.html
@@ -23,14 +23,24 @@
     <div class="wrapper" id="mainContent">
 
       <!--Select layer bounds-->
+      <div></div>
       <sp-label>Select layer bounds</sp-label>
-      <sp-action-group style="display: flex; justify-content: space-between;" title="Selects the bounds of art within the layer">
+      <sp-action-group style="display: flex; justify-content: space-between;" title="Selects the bounds of art within the layer. Alt+click selects the bounds without effects">
         <sp-action-button label="Edit" id="selectLayerBounds">
           <div slot="icon" class="icon" id="SelectLayerBounds">
             <svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><polygon points="998 998 863 998 863 928 928 928 928 863 998 863 998 998"  /><path d="M745.9,998h-187.35v-70h187.35v70ZM441.45,998h-187.35v-70h187.35v70Z"  /><polygon points="137 998 2 998 2 863 72 863 72 928 137 928 137 998"  /><path d="M72,745.9H2v-187.35h70v187.35ZM72,441.45H2v-187.36h70v187.36Z"  /><polygon points="72 137 2 137 2 2 137 2 137 72 72 72 72 137"  /><path d="M745.9,72h-187.36V2h187.36v70ZM441.45,72h-187.35V2h187.35v70Z"  /><polygon points="998 137 928 137 928 72 863 72 863 2 998 2 998 137"  /><path d="M998,745.9h-70v-187.36h70v187.36ZM998,441.45h-70v-187.35h70v187.35Z"  /><path d="M490.48,804.39c-35.99,0-71.59-7.53-104.3-22.72-66.68-30.97-112.6-90-125.97-161.94-7.51-40.39-.95-82.91,18.46-119.73,18.66-35.39,47.93-63.7,82.43-79.71,32.35-15.01,67.3-18.42,101.07-9.86,36.84,9.34,70.19,32.02,99.1,67.41l-46.46,37.96c-37.92-46.4-84.74-61.38-128.46-41.09-48.32,22.42-77.19,80.05-67.15,134.05,9.92,53.38,42.68,95.46,92.25,118.48,56.43,26.21,124.65,22.21,182.48-10.71,56.31-32.05,96.76-84.11,113.92-146.58,17.15-62.48,8.95-127.89-23.1-184.2-31.74-55.77-82.92-95.1-144.09-110.75-60.98-15.6-125.87-6.37-182.72,26l-29.68-52.14c70.44-40.09,151.15-51.45,227.27-31.98,77.09,19.72,141.5,69.15,181.36,139.2,39.98,70.23,50.21,151.83,28.81,229.76-21.4,77.93-71.86,142.87-142.09,182.84-41.66,23.71-87.71,35.7-133.13,35.71Z"  />
             </svg>
           </div>
-        </sp-action-button>
+
+        </sp-action-button>  
+          <div>
+            <sp-action-button label="Edit" quiet variant="secondary" id="o_infoButton">
+              <div slot="icon" class="icon">
+                <svg style="fill: currentColor;" id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"><path d="M9,1C4.58,1,1,4.58,1,9s3.58,8,8,8,8-3.58,8-8S13.42,1,9,1ZM8.85,3.15c.75-.04,1.39.53,1.43,1.28,0,.04,0,.09,0,.13.06.73-.49,1.37-1.22,1.43-.07,0-.14,0-.21,0-.75.05-1.39-.52-1.43-1.27,0-.05,0-.11,0-.16-.03-.75.55-1.38,1.3-1.41h0s.09,0,.13,0ZM11,13.5c0,.28-.22.5-.5.5h-3c-.28,0-.5-.22-.5-.5v-1c0-.28.22-.5.5-.5h.5v-3h-.5c-.28,0-.5-.22-.5-.5v-1c0-.28.22-.5.5-.5h2c.28,0,.5.22.5.5v4.5h.5c.28,0,.5.22.5.5v1Z"/>
+                </svg>
+              </div>
+            </sp-action-button>
+          </div>
       </sp-action-group>
 
       <!--Find selection center-->
@@ -365,6 +375,83 @@
             </sp-button>
             </div>
             <div style="padding: 10px;">
+            <sp-button class="okButton" variant="">
+              Ok
+            </sp-button>
+            </div>
+          </sp-action-group>
+        </footer>
+
+      </sp-action-group>
+    </div>
+  </sp-body>
+</dialog>
+
+<!------- Info ------->
+<dialog id="o_info">
+  <sp-body>
+    <div class="o_wrapper" id="optionDialogs">
+      <sp-action-group style="margin-left: 10px; margin-right: 10px;">
+
+        <sp-heading size="M">About:</sp-heading>
+
+        <sp-field-group>
+          <sp-body size="XS">Marqweee is a set of scripts meant to improve workflow and extend the capability of Photoshop's marquee tools.</sp-body>
+
+          <sp-divider size="large" style="margin-top: 20px; margin-bottom: 20px;"></sp-divider>
+
+          <sp-label size="L">Select layer bounds:</sp-label>
+          <sp-body size="XS">Selects the bounds of the active layer, aka the bounds of the art in a layer.<br> Alt / Option + Click selects the bounds of art without effects.
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Find selection center:</sp-label>
+          <sp-body size="XS">Finds the center of a selection and marks it with one or all of the following:
+            <p>
+              <br>- A 2x2 pixel in a new layer
+              <br>- Guides
+              <br>- A colour sampler
+            </p>
+            <br> Alt / Option + Click removes all guides and colour samplers.<br> Alt / Option + Clicking three times removes all pixel layers.
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Expand / shrink selection:</sp-label>
+          <sp-body size="XS">Expands or shrinks the active selection by the user's input (default is 1px).<br> Alt / Option click expands or shrinks the selection by the user's input (default is 5px).
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Halve selection:</sp-label>
+          <sp-body size="XS">Halves the left or top of the active selection or the canvas bounds, depending on user input.<br> Alt / Option click halves the right or bottom half.
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Feather selection:</sp-label>
+          <sp-body size="XS">Feathers the active selection by the user's input (default is 5px).<br> Alt / Option click feathers the selection by the user's input (default is 15px).
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Smooth selection:</sp-label>
+          <sp-body size="XS">Smooths the active selection by the user's input (default is 5px).<br> Alt / Option click smooths the selection by the user's input (default is 15px).
+          </sp-body>
+
+          <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Guides to selection:</sp-label>
+          <sp-body size="XS">When checked, new guides become a marquee selection from the position of the guide to the left or top of the canvas.<br><br> Dragging a guide to the right / bottom of a selection adds to the selection. Dragging a guide to the left / top of a selection subtracts from the original selection.
+          </sp-body>
+
+        </sp-field-group>
+
+
+        <footer class="optionsFooter">
+          <sp-action-group style="display: flex; justify-content: flex-start;">
+            <div style="padding: 20px;">
             <sp-button class="okButton" variant="">
               Ok
             </sp-button>
