added github link to info and manifest

--- a/index.html
+++ b/index.html
@@ -400,7 +400,9 @@
         <sp-heading size="M">About:</sp-heading>
 
         <sp-field-group>
-          <sp-body size="XS">Marqweee is a set of scripts meant to improve workflow and extend the capability of Photoshop's marquee tools.</sp-body>
+          <sp-body size="XS">Marqweee is a set of scripts meant to improve workflow and extend the capability of Photoshop's marquee tools.<br><br>
+          Original source can be viewed on <sp-link size="XS" href="https://github.com/Camlele/marqweee">GitHub</sp-link>.
+          </sp-body>
 
           <sp-divider size="large" style="margin-top: 20px; margin-bottom: 20px;"></sp-divider>
 
@@ -445,6 +447,10 @@
           </sp-body>
 
           <sp-divider size="medium" style="margin-top: 10px; margin-bottom: 10px;"></sp-divider>
+
+          <sp-label size="L">Guides to selection:</sp-label>
+          <sp-body size="XS">When checked, new guides become a marquee selection from the position of the guide to the left or top of the canvas.<br><br> Dragging a guide to the right / bottom of a selection adds to the selection. Dragging a guide to the left / top of a selection subtracts from the original selection.
+          </sp-body>
 
           <sp-label size="L">Guides to selection:</sp-label>
           <sp-body size="XS">When checked, new guides become a marquee selection from the position of the guide to the left or top of the canvas.<br><br> Dragging a guide to the right / bottom of a selection adds to the selection. Dragging a guide to the left / top of a selection subtracts from the original selection.
