--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!--  Written by Jon Westwood for Mahi Gaming BC Studio
+      https://github.com/Camlele/marqweee
   
       Requires Photoshop 22.5.0 minimum
 
       Current issues:
         when top guide is drawn immediately after bottom guide selection, 
-        it selects bounds from the bottom instead of the top 
+        it selects bounds from the canvas' bottom instead of the top 
 -->
 
 
